--- a/index.html
+++ b/index.html
@@ -44,12 +44,8 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Wilks Cycles</h2>
-							<p>Handbuilt Bikes<br />
-							Standard Sizes<br />
-							In The Heart of Colorado.</p>
-							<ul class="actions">
-								<li><a href="#" class="button special">Activate</a></li>
-							</ul>
+							<p>Handbuilt Bicycles<br />
+							Made in the Heart of Colorado</p>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
