--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 							<div class="image"><img src="images/Top.jpg" alt="" /></div><div class="content">
 								<h2>What size am I?<br />
 								Use the chart below to figure out your frame size.</h2>
-								<img src="standard-size-chart.png" alt="Road Frame Standard Sizing Chart." />
+								<img src="images/standard-size-chart.png" alt="Road Frame Standard Sizing Chart." />
 								<p></p>
 							</div>
 						</section>
