--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/Top.jpg" alt="" /></div><div class="content">
-								<h2>What size am I?<br />
-								Use the chart below to figure out your frame size.</h2>
+								<h2>What size am I?</h2>
+								<p>Use the chart below to figure out your frame size.</p>
 								<img src="images/standard-size-chart.png" alt="Road Frame Standard Sizing Chart." />
 								<p></p>
 							</div>
