--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/Parts.jpg" alt="" /></div><div class="content">
-								<h2>Who can use an standard frame?</h2>
+								<h2>Who can use a standard frame?</h2>
 								<p>Most people of average height and proprtions fit a standard frame size.</p>
 							</div>
 						</section>
