Remove three section
Remove bottom section the ipsen lorem, may add back when we have more content

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 					</section>
 
 				<!-- Three -->
+				<!--Blacking out for now, may use later to add mor info to page
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
@@ -128,6 +129,7 @@
 							</ul>
 						</div>
 					</section>
+					 -->
 
 				<!-- CTA -->
 					<section id="cta" class="wrapper style4">
