--- a/index.html
+++ b/index.html
@@ -135,15 +135,18 @@
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+								<h2>Contact Us</h2>
+								<p>You can email us at contactus@wilksfabrication.com or call at (303) 718-7163. We look Forward to hearing from you!</p>
 							</header>
+							<!--remving buttons for now
 							<ul class="actions vertical">
 								<li><a href="#" class="button fit special">Activate</a></li>
 								<li><a href="#" class="button fit">Learn More</a></li>
 							</ul>
 						</div>
+						-->
 					</section>
+
 
 				<!-- Footer -->
 					<footer id="footer">
