--- a/index.html
+++ b/index.html
@@ -21,18 +21,20 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">Wilks Cycles</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
+											<li><a href="Home.html">Home</a></li>
+											<!--
 											<li><a href="generic.html">Generic</a></li>
 											<li><a href="elements.html">Elements</a></li>
 											<li><a href="#">Sign Up</a></li>
 											<li><a href="#">Log In</a></li>
+										-->
 										</ul>
 									</div>
 								</li>
@@ -143,8 +145,8 @@
 								<li><a href="#" class="button fit special">Activate</a></li>
 								<li><a href="#" class="button fit">Learn More</a></li>
 							</ul>
+							-->
 						</div>
-						-->
 					</section>
 
 
