--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="Home.html">Home</a></li>
+											<li><a href="index.html">Home</a></li>
 											<!--
 											<li><a href="generic.html">Generic</a></li>
 											<li><a href="elements.html">Elements</a></li>
