--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/Craig.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/Clause.jpg" alt="" /></div><div class="content">
 								<h2>Who We Are</h2>
 								<p>Craig has been riding bikes since he was a wee lad. In college he started building his own frames and found a new passion for bike building.<br />
 								Every frame is treated like a work of art with an exacting attention to detail.</p>
