--- a/index.html
+++ b/index.html
@@ -95,10 +95,11 @@
 					</section>
 
 				<!-- Three -->
-				<!--Blacking out for now, may use later to add mor info to page
+
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
+								<div class="image"><img src="images/Clause.jpg" alt="" /></div><div class="content">
 								<h2>Accumsan mus tortor nunc aliquet</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
 								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
@@ -131,7 +132,7 @@
 							</ul>
 						</div>
 					</section>
-					 -->
+
 
 				<!-- CTA -->
 					<section id="cta" class="wrapper style4">
