--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<div class="image"><img src="images/Clause.jpg" alt="" /></div><div class="content">
 								<h2>Accumsan mus tortor nunc aliquet</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
 								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
+									<div class="image"><img src="images/Clause.jpg" alt="" /></div><div class="content"></div>
 									<h3>Arcu accumsan</h3>
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
