add iframe gallery

--- a/index.html
+++ b/index.html
@@ -99,13 +99,14 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
+								<iframe width="130" height="198" src="https://adobe.ly/2HsPCw0" name="imgbox" id="imgbox"></iframe>
 								<h2>Accumsan mus tortor nunc aliquet</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
 								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
-									<div class="image"><img src="images/Clause.jpg" alt="" /></div><div class="content"></div>
+									<div class="image"><img src="images/2bikes.jpg" alt="" /></div><div class="content"></div>
 									<h3>Arcu accumsan</h3>
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
@@ -139,7 +140,7 @@
 						<div class="inner">
 							<header>
 								<h2>Contact Us</h2>
-								<p>You can email us at contactus@wilksfabrication.com or call at (303) 718-7163. We look Forward to hearing from you!</p>
+								<p>You can email us at WilksCycles@gmail.com or call at (303) 718-7163. We look Forward to hearing from you!</p>
 							</header>
 							<!--remving buttons for now
 							<ul class="actions vertical">
