edit iframe size

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<iframe width="130" height="198" src="https://adobe.ly/2HsPCw0" name="imgbox" id="imgbox"></iframe>
+								<iframe src="https://adobe.ly/2HsPCw0" style="height:200px;width:300px;"></iframe>
 								<h2>Accumsan mus tortor nunc aliquet</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
 								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
