--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<iframe src="https://adobe.ly/2HsPCw0" style="height:200px;width:300px;"></iframe>
+								<iframe src="https://adobe.ly/2HsPCw0" height="200" width="300"></iframe>
 								<h2>Accumsan mus tortor nunc aliquet</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
 								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
