--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<iframe src="https://adobe.ly/2HsPCw0" height="400" width="500" name="iframe_a"></iframe>
-									<p><a href="https://adobe.ly/2HsPCw0" target="iframe_a">W3Schools.com</a></p>
+								<iframe src="https://adobe.ly/2HsPCw0" height="400" width="500" name="iframe"></iframe>
+									
 								<h2>Accumsan mus tortor nunc aliquet</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
 								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
