--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
 						<div class="inner">
 							<header class="major">
 								<iframe src="https://adobe.ly/2HsPCw0" height="400" width="500" name="iframe"></iframe>
-									
+
 								<h2>Accumsan mus tortor nunc aliquet</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
 								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
-									<div class="image"><img src="images/2bikes.jpg" alt="" /></div><div class="content"></div>
+									<div class="image"><img src="images/2bikes.jpg" height="400" width="500" alt="" /></div><div class="content"></div>
 									<h3>Arcu accumsan</h3>
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
