--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
-									<div class="image"><img src="images/2bikes.jpg" height="400" width="500" alt="" /></div><div class="content"></div>
+									<div class="image"><img src="images/2bikes.jpg" alt="" width="500" height="600"/></div><div class="content"></div>
 									<h3>Arcu accumsan</h3>
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
