--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/Parts.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/frontview.jpg" alt="" /></div><div class="content">
 								<h2>Who can use a standard frame?</h2>
 								<p>Most people of average height and proprtions fit a standard frame size.</p>
 							</div>
