add juicebok embed

--- a/index.html
+++ b/index.html
@@ -99,7 +99,18 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<iframe src="https://adobe.ly/2HsPCw0" height="400" width="500" name="iframe"></iframe>
+								<!--START JUICEBOX EMBED-->
+								<script src="jbcore/juicebox.js"></script>
+								<script>
+									new juicebox({
+										containerId: "juicebox-container",
+										galleryWidth: "100%",
+										galleryHeight: "100%",
+										backgroundColor: "rgba(34,34,34,1)"
+									});
+									</script>
+									<div id="juicebox-container"></div>
+									<!--END JUICEBOX EMBED-->
 
 								<h2>Accumsan mus tortor nunc aliquet</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
