--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
 									<div id="juicebox-container"></div>
 									<!--END JUICEBOX EMBED-->
 
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Bicycle Gallery</h2>
+								<p>Scroll through our gallery and take a gander at some of our handbuilt frames</p>
 							</header>
+							<!--	close out setion for now
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
 									<div class="image"><img src="images/2bikes.jpg" alt="" width="500" height="600"/></div><div class="content"></div>
@@ -142,7 +142,7 @@
 									<h3>Tortor Ut</h3>
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
-							</ul>
+							</ul> -->
 						</div>
 					</section>
 
