--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<header class="major">
 								<h2>Looking for fine craftsmanship,<br />
 								without the custom cost?</h2>
-								<p>At Wilks Cycles we build frames by hand that fit standard sizes<br />
+								<p>At Wilks Cycles we build frames by hand<br />
 								Don't waste time on made-to-measure bikes.</p>
 							</header>
 							<ul class="icons major">
@@ -74,7 +74,8 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/frontview.jpg" alt="" /></div><div class="content">
 								<h2>Who can use a standard frame?</h2>
-								<p>Most people of average height and proprtions fit a standard frame size.</p>
+								<p>Most people of average height and proprtions fit a standard frame size.<br />
+								Starting with a standard size then customizing from there saves time and money. </p>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -167,11 +168,9 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="https://www.facebook.com/WilksCycles/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.instagram.com/wilkscycles/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="wilkscycles@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
